--- a/front/package.json
+++ b/front/package.json
@@ -25,8 +25,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "@types/howler": "^2.2.12",
     "bootstrap": "^5.3.2",
     "front": "file:",
+    "howler": "^2.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
